--- a/dont-use-here.now.json
+++ b/dont-use-here.now.json
@@ -7,16 +7,18 @@
  ],
  "builds": [
    { "src":"/public/index.html",  "use":"@now/html-minifier" },
+   { "src":"/public/404.html",    "use":"@now/html-minifier" },
    { "src":"/public/favicon.ico", "use":"@now/static"        },
    { "src":"/public/favicon.png", "use":"@now/static"        },
    { "src":"/index.js",           "use":"@now/node"          }
  ],
  "routes": [
-   { "src":"^/public/(.*).ico", "dest":"/$1.ico",     "headers":{"cache-control":"s-maxage=31536000, immutable"} },
-   { "src":"^/public/(.*).png", "dest":"/$1.png",     "headers":{"cache-control":"s-maxage=31536000, immutable"} },
-   { "src":"^/public/(.*).svg", "dest":"/$1.svg",     "headers":{"cache-control":"s-maxage=31536000, immutable"} },
-   { "src":"^/public/(.*).css", "dest":"/$1.css",     "headers":{"cache-control":"s-maxage=31536000, immutable"} },
-   { "src":"^/public/(.*)",     "dest":"/index.html", "headers":{"cache-control":"s-maxage=31536000, immutable"} },
-   { "src":"^/(.*)",            "dest":"/index.js"                                                               }
+   { "src":"^/public/(.*).ico",   "dest":"/$1.ico",     "headers":{"cache-control":"s-maxage=31536000, immutable"} },
+   { "src":"^/public/(.*).png",   "dest":"/$1.png",     "headers":{"cache-control":"s-maxage=31536000, immutable"} },
+   { "src":"^/public/(.*).svg",   "dest":"/$1.svg",     "headers":{"cache-control":"s-maxage=31536000, immutable"} },
+   { "src":"^/public/(.*).css",   "dest":"/$1.css",     "headers":{"cache-control":"s-maxage=31536000, immutable"} },
+   { "src":"^/public/index.html", "dest":"/index.html", "headers":{"cache-control":"s-maxage=31536000, immutable"} },
+   { "src":"^/public/(.*)",       "dest":"/404.html",   "headers":{"cache-control":"s-maxage=31536000, immutable"} },
+   { "src":"^/(.*)",              "dest":"/index.js"                                                               }
  ]
 }
