--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
   },
   "files": [
     "build/index.js",
+    "build/public",
     "build/public/index.html",
+    "build/public/404.html",
     "build/logs"
   ],
   "engines": {
